# brainrotbot

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  run.bat
.github/workflows/: daily-pipeline.yml
config/: settings.toml  tiktok_cookies.txt  yt_cookies.txt
data/: ledger.jsonl
data/stories/: 1ux5v65_en.json  1ux5v65_es.json  1ux5v65_fr.json  1uyfiwp_en.json  1uyfiwp_es.json  1uyfiwp_fr.json  1uyw1ao_en.json  1uyw1ao_es.json  1uyw1ao_fr.json  1uzbda8_en.json  1uzbda8_es.json  1uzbda8_fr.json  1uzbnah_en.json  1uzbnah_es.json  1uzbnah_fr.json  1v03f89_en.json  1v03f89_es.json  1v03f89_fr.json  1v0ekou_en.json  1v0ekou_es.json  1v0ekou_fr.json  1v0fqbt_en.json  1v0fqbt_es.json  1v0fqbt_fr.json  1v0l0rw_en.json  1v0l0rw_es.json  1v0l0rw_fr.json  1v13kdk_en.json  1v13kdk_es.json  1v13kdk_fr.json  1v1hizf_en.json  1v1hizf_es.json  1v1hizf_fr.json  1v1yluc_en.json  1v1yluc_es.json  1v1yluc_fr.json  1v265i0_en.json  1v265i0_es.json  1v265i0_fr.json  1v2tbda_en.json  (+5 more)
resources/: banned_words.toml
src/brainrotbot/: __init__.py  config.py  ledger.py  models.py  pipeline.py
src/brainrotbot/edit/: compose.py
src/brainrotbot/music/: ncs.py
src/brainrotbot/reddit/: fetch.py  select.py
src/brainrotbot/subtitles/: generate.py
src/brainrotbot/text/: censor.py  clean.py  filter_words.py  translate.py
src/brainrotbot/thumbnail/: generate.py  images.py
src/brainrotbot/tts/: censor.py  intro_sfx.py  synthesize.py
src/brainrotbot/upload/: queue.py  tiktok.py  zernio.py
src/brainrotbot/video/: background.py
src/brainrotbot/wiki/: __init__.py  article.py
tests/: test_censor.py  test_clean.py  test_edit.py  test_filter_words.py  test_ncs.py  test_queue.py  test_select.py  test_translate.py  test_tts.py  test_video.py  test_wiki.py  test_zernio.py
tests/fixtures/: ncs_instrumental_page.html
