[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrotbot"
version = "0.1.0"
description = "Automated TikTok brainrot content pipeline (Reddit -> TTS -> video -> upload)."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",  # reserved for the future TikTok-secrets step
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
brainrotbot = "brainrotbot.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
