[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrotbot"
version = "0.1.0"
description = "Automated TikTok brainrot content pipeline (Reddit -> TTS -> video -> upload)."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",  # reserved for the future TikTok-secrets step
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Step 2 (text-to-speech). torch is pulled in transitively by kokoro. misaki[ja]/[zh] are
# required (not optional) because we plan to translate posts to Japanese/Chinese later.
tts = [
    "kokoro>=0.9.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "misaki[ja]>=0.9",
    "misaki[zh]>=0.9",
]
# Step 3 (background video). yt-dlp sources clips; imageio-ffmpeg bundles a static ffmpeg
# (no system install / no conda-forge Windows DLL issues); numpy scores per-frame motion.
video = [
    "yt-dlp>=2024.0",
    "imageio-ffmpeg>=0.5",
    "numpy>=1.24",
]

[project.scripts]
brainrotbot = "brainrotbot.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
