[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrotbot"
version = "0.1.0"
description = "Automated TikTok brainrot content pipeline (Reddit -> TTS -> video -> upload)."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",  # reserved for the future TikTok-secrets step
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Step 2 (text-to-speech). torch is pulled in transitively by kokoro. misaki[ja]/[zh] are
# required (not optional) because we plan to translate posts to Japanese/Chinese later.
tts = [
    "kokoro>=0.9.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "misaki[ja]>=0.9",
    "misaki[zh]>=0.9",
]
# Step 3 (background video). yt-dlp sources clips; imageio-ffmpeg bundles a static ffmpeg
# (no system install / no conda-forge Windows DLL issues).
video = [
    "yt-dlp>=2024.0",
    "imageio-ffmpeg>=0.5",
]
# Step 5 (background music). bs4 parses the NCS /music-search listing; requests is already
# core. Downloads use stdlib urllib so no extra HTTP client is needed at runtime.
music = [
    "beautifulsoup4>=4.12",
]
# Step 6 (thumbnail). Pillow composites the post title onto a downloaded background image.
# Pixabay search uses `requests` (core); the image download uses stdlib urllib (like music).
thumbnail = [
    "pillow>=10.0",
]
# Step 7 (upload). Playwright drives the TikTok web Studio uploader (toggles subtitles, posts
# public, sets the cover, reads back the video URL -- none of which the official API supports).
# After install run once: `playwright install chromium`.
upload = [
    "playwright>=1.40",
]

[project.scripts]
brainrotbot = "brainrotbot.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
